--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -11,9 +11,10 @@
         android:id="@+id/textV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="60dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="50dp"
         android:fontFamily="@font/press_start_2p"
         android:text="V"
         android:textColor="#D33808"
@@ -21,15 +22,13 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/textI2"
+        android:id="@+id/textI"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="234dp"
-        android:layout_marginTop="319dp"
-        android:layout_marginEnd="21dp"
+        android:layout_below="@+id/textI2"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="53dp"
+        android:layout_toEndOf="@+id/textP"
         android:fontFamily="@font/press_start_2p"
         android:text="I"
         android:textColor="#5C210E"
@@ -37,30 +36,13 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/textI"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="206dp"
-        android:layout_marginTop="59dp"
-        android:layout_marginEnd="5dp"
-        android:fontFamily="@font/press_start_2p"
-        android:text="I"
-        android:textColor="#FF5722"
-        android:textSize="150sp"
-        android:textStyle="bold" />
-
-    <TextView
         android:id="@+id/textP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="314dp"
+        android:layout_below="@+id/textV"
+        android:layout_marginTop="50dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="60dp"
         android:fontFamily="@font/press_start_2p"
         android:text="P"
         android:textColor="#EF9F86"
@@ -68,15 +50,26 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/textName"
+        android:id="@+id/textI2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="60dp"
+        android:layout_toEndOf="@+id/textV"
+        android:fontFamily="@font/press_start_2p"
+        android:text="I"
+        android:textColor="#FF5722"
+        android:textSize="150sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textName"
+        android:layout_width="252dp"
+        android:layout_height="103dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="128dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="41dp"
+        android:layout_marginEnd="7dp"
+        android:layout_marginBottom="30dp"
         android:fontFamily="@font/press_start_2p"
         android:text="Video Picker"
         android:textColor="#FFFFFF"
